Igor_Shahov/13.K8sHelm/drupal_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "dpsa.k8s-32.sa"
spec:
  rules:
    - host: dpsa.k8s-32.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-release-drupal
                port:
                  number: 80
