Igor_Shahov/13.K8sHelm/wp_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "wordpress-sa.k8s-32.sa"
spec:
  rules:
    - host: wordpress-sa.k8s-32.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: migelalfa-wordpress
                port:
                  number: 80
